--- a/social-media-app/package.json
+++ b/social-media-app/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@ant-design/icons": "^5.4.0",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
@@ -12,6 +13,8 @@
     "react-dom": "^18.3.1",
     "react-router-dom": "6",
     "react-scripts": "5.0.1",
+    "swr": "^2.2.5",
+    "timeago.js": "^4.0.2",
     "web-vitals": "^2.1.0",
     "webpack": "^5.93.0",
     "webpack-dev-server": "^5.0.4"
