--- a/social-media-app/package.json
+++ b/social-media-app/package.json
@@ -4,17 +4,24 @@
   "private": true,
   "dependencies": {
     "@ant-design/icons": "^5.4.0",
+    "@faker-js/faker": "^8.4.1",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
-    "@testing-library/user-event": "^13.2.1",
+    "@testing-library/user-event": "^14.5.2",
+    "axios": "^0.21.4",
+    "axios-auth-refresh": "^3.3.6",
     "bootstrap": "^5.3.3",
+    "loader-utils": "^3.3.1",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.4",
     "react-dom": "^18.3.1",
     "react-router-dom": "6",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
+    "rimraf": "^6.0.1",
+    "svgo": "^3.3.2",
     "swr": "^2.2.5",
     "timeago.js": "^4.0.2",
+    "uuid": "^10.0.0",
     "web-vitals": "^2.1.0",
     "webpack": "^5.93.0",
     "webpack-dev-server": "^5.0.4"
@@ -42,5 +49,16 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "jest": "^29.7.0",
+    "jest-localstorage-mock": "^2.4.26"
+  },
+  "jest": {
+    "resetMocks": false
+  },
+  "resolutions": {
+    "nth-check": "2.0.1",
+    "postcss": "8.4.31"
   }
 }
