--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,25 @@
+asgiref==3.8.1
 black==24.4.2
+click==8.1.7
+colorama==0.4.6
 Django==5.0.6
+django-cors-headers==4.4.0
 django-filter==24.2
 djangorestframework==3.15.2
 djangorestframework-simplejwt==5.3.1
+drf-nested-routers==0.94.1
+gunicorn==23.0.0
+iniconfig==2.0.0
+mypy-extensions==1.0.0
+packaging==24.1
+pathspec==0.12.1
 pillow==10.4.0
+platformdirs==4.2.2
+pluggy==1.5.0
 psycopg2-binary==2.9.9
 PyJWT==2.8.0
+pytest==8.2.2
+pytest-django==4.8.0
 python-dotenv==1.0.1
+sqlparse==0.5.0
+tzdata==2024.1
