--- a/social-media-app/package.json
+++ b/social-media-app/package.json
@@ -23,12 +23,11 @@
     "timeago.js": "^4.0.2",
     "uuid": "^10.0.0",
     "web-vitals": "^2.1.0",
-    "webpack": "^5.93.0",
     "webpack-dev-server": "^5.0.4"
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "webpack --mode production",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -51,8 +50,17 @@
     ]
   },
   "devDependencies": {
+    "@babel/core": "^7.25.2",
+    "@babel/preset-env": "^7.25.4",
+    "@babel/preset-react": "^7.24.7",
+    "babel-loader": "^9.1.3",
+    "copy-webpack-plugin": "^12.0.2",
+    "html-loader": "^5.1.0",
+    "html-webpack-plugin": "^5.6.0",
     "jest": "^29.7.0",
-    "jest-localstorage-mock": "^2.4.26"
+    "jest-localstorage-mock": "^2.4.26",
+    "webpack": "^5.94.0",
+    "webpack-cli": "^5.1.4"
   },
   "jest": {
     "resetMocks": false
